--- a/styles.css
+++ b/styles.css
@@ -203,6 +203,17 @@ main {
     color: var(--text-light);
 }
 
+.locality-badge {
+    display: inline-block;
+    background-color: rgb(95, 91, 91);
+    color: var(--white);
+    padding: 0.5rem 1rem;
+    border-radius: 20px;
+    font-weight: 700;
+    margin-bottom: 1rem;
+    font-size: 0.9rem;
+}
+
 .trail-badge {
     display: inline-block;
     background-color: var(--secondary-color);
